Bug 340728 - Widget selection issue outside mouse selection rectangle on sequence diagrams
Summary: Widget selection issue outside mouse selection rectangle on sequence diagrams
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.14.2 (KDE Applications 4.14.2)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-07 13:05 UTC by Ralf Habacker
Modified: 2014-11-26 12:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.14.97 (KDE 14.11.97)
Sentry Crash Report:


Attachments
xmi testcase (15.28 KB, application/x-uml)
2014-11-07 13:06 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2014-11-07 13:05:46 UTC
Selecting messages in a sequence diagram using the mouse + left click also selects messages/objects outside the selection rectangle. 


Reproducible: Always

Steps to Reproduce:
1. open umbrello with appended test case
2. starts selecting left from 'add file' message
3. extend the selection to the 'add file' label

Actual Results:  
The object 'client' and 'applet' and all message between both objects are selected too.


Expected Results:  
Only messages should be selected, which are partially or complete inside the selection rectangle.
Comment 1 Ralf Habacker 2014-11-07 13:06:04 UTC
Created attachment 89493 [details]
xmi testcase
Comment 2 Ralf Habacker 2014-11-11 11:10:02 UTC
In bigger sequence diagrams the mentioned issue makes it impossible for example to delete messages in a specific area.  You need to delete them each by each.
Comment 3 Ralf Habacker 2014-11-22 13:06:53 UTC
Git commit 0780af1092873e2467da854622a647d60dbc86c7 by Ralf Habacker.
Committed on 12/11/2014 at 19:42.
Pushed by habacker into branch 'Applications/14.12'.

Fix bug 'Widget selection issue outside mouse selection rectangle on sequence diagrams'.

When selecting messages on a sequence diagram using the mouse do not auto select
object widgets outside the selecting rectangle.

Object widgets required for pasting into other diagrams are added automatically
on widget copy operation.

M  +41   -1    umbrello/clipboard/umlclipboard.cpp
M  +1    -0    umbrello/clipboard/umlclipboard.h
M  +0    -40   umbrello/umlscene.cpp
M  +0    -2    umbrello/umlscene.h

http://commits.kde.org/umbrello/0780af1092873e2467da854622a647d60dbc86c7