Fix bug 'Widget selection issue outside mouse selection rectangle on sequence diagrams'.

When selecting messages on a sequence diagram using the mouse do not auto select
object widgets outside the selecting rectangle.

Object widgets required for pasting into other diagrams are added automatically
on widget copy operation.

BUG:340728